k8s/front.yml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: front
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: front-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: front
        version: v1
    spec:
      containers:
        - name: front
          image: leel2415/istio-front:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
