k8s/gateway-bluegreen.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-blue-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - blue.istio.com
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-green-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - green.istio.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-blue
spec:
  hosts:
    - blue.istio.com
  gateways:
    - istio-blue-gateway
  http:
    - headers:
        request:
          set:
            x-env: blue
      route:
        - destination:
            host: front
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-green
spec:
  hosts:
    - green.istio.com
  gateways:
    - istio-green-gateway
  http:
    - headers:
        request:
          set:
            x-env: green
      route:
        - destination:
            host: front
            port:
              number: 8080
