k8s/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: core1
spec:
  hosts:
  - core1
  http:
  - match:
    - headers:
        x-env:
         exact: green
    route:
    - destination:
        host: core1
        subset: green
  - route:
    - destination:
        host: core1
        subset: blue
